Add Login/Logout for Users using sessions

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,20 @@
   </head>
 
   <body>
-    <h1 >Private Events</h1>
-    
+  <!-- Just an image -->
+    <nav class="navbar navbar-light bg-light">
+      <h1 class="navbar-brand">Private Events</h1>
+      <div class="navbar-text">
+        <% if logged_in? %>
+          <span>You are Logged In, <%= current_user.name %></span> |
+          <%= link_to "Logout", controller: "sessions", action: "logout", :class => 'navbar-link' %>
+        <%end%>
+      </div>
+
+
+
+    </nav>
+
     <%= yield %>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
