Add event_attending functionality and change user_id for creator_id in Events
-Change user_id for creator_id
-Use creator alias for event user creator
-Created event_attending controller
-Add attende button to events list

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -6,7 +6,7 @@
       <th>Date</th>
       <th>Location</th>
       <th>Description</th>
-      <th></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
@@ -19,6 +19,7 @@
         <td><%= event.local %></td>
         <td><%= event.description %></td>
         <td><%= link_to 'Show', event %></td>
+        <td><%= link_to "Attend", event_attendings_path %></td>
       </tr>
     <% end %>
   </tbody>
