--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -13,5 +13,6 @@
 <p><%= @event.description %></p>
 
 <label>Author: </label>
-<p><%= @event.user.name %></p>
+<p><%= @event.creator.name %></p>
+
 
