Add the create method to build Attendances
Built nested resources
Set create methods

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -15,4 +15,6 @@
 <label>Author: </label>
 <p><%= @event.creator.name %></p>
 
+<td><%= link_to "Attend", event_event_attendings_path(@event.id), method: :post %></td>
+
 
