--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= event.local %></td>
         <td><%= event.description %></td>
         <td><%= link_to 'Show', event %></td>
-        <td><%= link_to "Attend", event_attendings_path %></td>
+        <td><%= link_to "Attend", event_event_attendings_path(event.id), method: :post %></td>
       </tr>
     <% end %>
   </tbody>
