Set tests and attendance button
- Set image for events attended
- Set button for events not attended
- Set association tests

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,6 +15,7 @@
       <% @users.each do |user| %>
         <tr>
           <td><%= user.name %></td>
+          <td><%= link_to 'Show', user %></td>
         </tr>
       <% end %>
     </tbody>
