--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
       <div class="navbar-nav d-flex flex-row py-2">
         <li class="nav-item px-2"><%= link_to "Users", users_path, :class => 'navbar-link' %></li>
         <li class="nav-item px-2"><%= link_to "Events", events_path, :class => 'navbar-link' %></li>
+        <li class="nav-item px-2"><%= link_to "Create Event", new_event_path, :class => 'navbar-link' %></li>
       </div>
 
       <div class="navbar-text">
