--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,13 +25,7 @@
       </div>
 
       <div class="navbar-text">
-        <% if logged_in? %>
-          <span>You are Logged In, <%= current_user.name %></span> |
-          <%= link_to "Logout", controller: "sessions", action: "logout", :class => 'navbar-link' %>
-        <% else %>
-          <%= link_to "Login", '/login', method: :get, :class => 'navbar-link' %> |
-          <%= link_to "Sign Up", '/users/new', method: :get, :class => 'navbar-link' %>
-        <%end%>
+        <%= customized_navbar %>
       </div>
 
     
